# stef-raj.github.io

./: .gitignore  README.md  _config.yml  about.md  index.md  projects.md
_posts/: 2025-12-04-just-do-stuff.md  2025-12-05-just-do-stuff.md  2025-12-05-my-first-blog-post.md
projects/: advanced-mc.md  advanced-python.md  analysis-topology.md  applied-calculus.md  autodiff.md  code-quality-tools.md  complexity-ds.md  convex-lipschitz.md  cxx-bindings.md  diffeq-solvers.md  distributed-hpo.md  floating-point-quirks.md  functional-programming.md  generative-models.md  high-d-intuition.md  julia-dispatch.md  layer-implementation.md  matrix-decompositions.md  measure-theory.md  ml-diffeq.md  modern-architectures.md  nonlinear-solvers.md  numerical-integration.md  optimizer-analysis.md  package-ci.md  ppo-rl.md  regularisation.md  trace-estimation.md  uat-deep-dive.md  variance-reduction.md
projects/Distributed-HPO/: main.py  pyproject.toml
projects/Distributed-HPO/scripts/: run_dist.py  run_hpo.py
projects/Distributed-HPO/src/dist_hpo/: model.py  trainer.py
projects/Manifolds-Kernels/: main.py  pyproject.toml
projects/Manifolds-Kernels/scripts/: compare_kernels.py  viz_manifold.py
projects/Manifolds-Kernels/src/: kernels.py
projects/Manifolds-Kernels/src/manifolds_kernels/models/: krr.py
projects/Manifolds-Kernels/src/manifolds_kernels/utils/: plotting.py
projects/Matrix-Decompositions/: main.py  pyproject.toml
projects/Matrix-Decompositions/scripts/: analyze_stability.py
projects/Matrix-Decompositions/src/matrix_decomps/: least_squares.py  solvers.py
projects/Nonlinear-Solvers/: main.py  pyproject.toml
projects/Nonlinear-Solvers/scripts/: compare_solvers.py
projects/Nonlinear-Solvers/src/nonlinear_solvers/: problems.py  solvers.py
projects/Optimizer-Analysis/: analysis.md  main.py  pyproject.toml
projects/Optimizer-Analysis/scripts/: compare_convergence.py
projects/Optimizer-Analysis/src/optimizer_analysis/: objectives.py  optimizers.py
projects/PPO-RL/: main.py  pyproject.toml
projects/PPO-RL/scripts/: train_cartpole.py
projects/PPO-RL/src/ppo_rl/: agent.py  buffer.py  networks.py
