[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matrix-decomps"
version = "0.1.0"
description = "Matrix Decompositions Analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "scipy>=1.15.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/matrix_decomps"]
