[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optimizer-analysis"
version = "0.1.0"
description = "Optimizer Deep Dive"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/optimizer_analysis"]
