[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ppo-rl"
version = "0.1.0"
description = "PPO Implementation for CartPole"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.2",
    "matplotlib>=3.10.7",
    "mlx>=0.30.0",
    "numpy>=2.3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ppo_rl"]
